Finish the first test file

--- a/www/primitives/index.html
+++ b/www/primitives/index.html
@@ -11,6 +11,6 @@
     <script src="primitives.js"></script>
     <script src="/lib/jquery.js"></script>
     <script src="/lib/confirm.js"></script>
-    <script src="test.js"></script>
+    <script src="/lib/test/primitives_test.js"></script>
   </body>
 </html>
