Added two more exercises (copy and array)

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,8 @@
       <ul>
         <li><a href="primitives/">Primitives</a></li>
         <li><a href="control/">Control Flow</a></li>
+        <li><a href="copy/">Copy Function</a></li>
+        <li><a href="array/">Arrays</a></li>
       </ul>
     </section>
   </body>
