--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,8 @@
         <li><a href="control/">Control Flow</a></li>
         <li><a href="copy/">Copy Function</a></li>
         <li><a href="array/">Arrays</a></li>
+        <li><a href="string/">Strings</a></li>
+        <li><a href="closure/">Closures</a></li>
       </ul>
     </section>
   </body>
