Add the flags exercise

--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
         <li><a href="array/">Arrays</a></li>
         <li><a href="string/">Strings</a></li>
         <li><a href="closure/">Closures</a></li>
+        <li><a href="closure/">Flags</a></li>
       </ul>
     </section>
   </body>
