Added more exercises and the sandbox

--- a/www/index.html
+++ b/www/index.html
@@ -9,14 +9,23 @@
 
     <section>
       <h2>Exercises:</h2>
-      <ul>
+      <ol>
         <li><a href="primitives/">Primitives</a></li>
         <li><a href="control/">Control Flow</a></li>
         <li><a href="copy/">Copy Function</a></li>
         <li><a href="array/">Arrays</a></li>
         <li><a href="string/">Strings</a></li>
         <li><a href="closure/">Closures</a></li>
-        <li><a href="closure/">Flags</a></li>
+        <li><a href="flags/">Flags</a></li>
+        <li><a href="events/">Events</a></li>
+        <li><a href="ajax/">Ajax</a></li>
+      </ol>
+    </section>
+
+    <section>
+      <h2>General Purpose</h2>
+      <ul>
+        <li><a href="sandbox/">JavaScript Sandbox</a></li>
       </ul>
     </section>
   </body>
