Edits to the exercises and their instructions

--- a/www/ajax/index.html
+++ b/www/ajax/index.html
@@ -3,16 +3,23 @@
   <head>
     <title>Ajax Exercise</title>
     <link href="/core.css" rel="stylesheet" type="text/css"/>
+    <link href="index.css" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
     <h1>Ajax Exercise</h1>
 
-    <button>Load Content</button>
+    <div>
+      <button>Load Content</button>
+    </div>
 
-    <ul>
+    <ul id="artists">
     </ul>
 
+    <ul id="details">
+    </ul>
+
+    <br class="clear"/>
     <script src="ajax.js"></script>
   </body>
 </html>
