--- a/www/flags/index.html
+++ b/www/flags/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div id="container">
-      <h1>Find the flag elements.</h1>
+      <h1 class="flag">Find the flag elements.</h1>
 
       <p>
         There are several flag elements ("FLAG") in the content
@@ -18,7 +18,7 @@
 
       <div class="main">
 
-        <h2>List of Articles:</h2>
+        <h2 class="flag">List of Articles:</h2>
 
         <ul>
           <li>One</li>
@@ -26,7 +26,7 @@
           <li>Three</li>
         </ul>
 
-        <div id="articles">
+        <div id="articles" class="flag">
           <article class="new">
             <h3>Article 1</h3>
 
