Add another exercise (function args and parsing)

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
       <ol>
         <li><a href="primitives/">Primitives</a></li>
         <li><a href="control/">Control Flow</a></li>
+        <li><a href="parse/">Parsing</a></li>
         <li><a href="copy/">Copy Function</a></li>
         <li><a href="array/">Arrays</a></li>
         <li><a href="closure/">Closures</a></li>
