Clean up the flags exercise a bit

--- a/www/events/index.html
+++ b/www/events/index.html
@@ -34,7 +34,7 @@
     </p>
 
     <p>
-      <a href="#">Click Me</a>
+      <a href="http://www.google.com">Click Me</a>
       <span>0</span>
     </p>
 
