--- a/www/flags/index.html
+++ b/www/flags/index.html
@@ -8,25 +8,18 @@
 
   <body>
     <div id="container">
-      <h1 class="flag">Find the flag elements.</h1>
-
-      <p>
-        There are several flag elements ("FLAG") in the content
-        below. Find and move them into the <code>#bucket</code>
-        element.
-      </p>
+      <h1 class="foo">Find the flag elements.</h1>
 
       <div class="main">
-
-        <h2 class="flag">List of Articles:</h2>
+        <h2 class="foo">List of Articles:</h2>
 
         <ul>
           <li>One</li>
-          <li class="flag">FLAG #1</li>
+          <li class="foo">FLAG #1</li>
           <li>Three</li>
         </ul>
 
-        <div id="articles" class="flag">
+        <div id="articles" class="foo">
           <article class="new">
             <h3>Article 1</h3>
 
