--- a/www/parse/index.html
+++ b/www/parse/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1>Primitives Exercise</h1>
+    <h1>Parsing Exercise</h1>
 
     <script src="parse.js"></script>
     <script src="/lib/jquery.js"></script>
