Make the example HTML file a bit more complicated

--- a/examples/simple.html
+++ b/examples/simple.html
@@ -4,7 +4,10 @@
   </head>
 
   <body>
-    <h1>Welcome</h1>
-    <p>Awesome Site!</p>
+    <h1 id="title">Welcome</h1>
+
+    <p>
+      Awesome <span class="loud">Site!</span>
+    </p>
   </body>
 </html>
