Changes from day 2 of 2

--- a/www/ajax/index.html
+++ b/www/ajax/index.html
@@ -13,11 +13,11 @@
       <button>Load Content</button>
     </div>
 
-    <ul id="artists">
-    </ul>
+    <table id="artists">
+    </table>
 
-    <ul id="details">
-    </ul>
+    <table id="details">
+    </table>
 
     <br class="clear"/>
     <script src="ajax.js"></script>
