Add an HTML file for playing with the DOM

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <section>
       <h2>General Purpose</h2>
       <ul>
+        <li><a href="dom/">DOM Playground</a></li>
         <li><a href="sandbox/">JavaScript Sandbox</a></li>
       </ul>
     </section>
