--- a/www/events/index.html
+++ b/www/events/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Events Exercise</title>
@@ -38,6 +38,8 @@
       <span>0</span>
     </p>
 
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/linter.js"></script>
     <script src="events.js"></script>
   </body>
 </html>
