--- a/www/flags/index.html
+++ b/www/flags/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Flag Exercise</title>
@@ -71,6 +71,8 @@
       </div>
     </div>
 
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/linter.js"></script>
     <script src="flags.js"></script>
   </body>
 </html>
