--- a/www/ajax/index.html
+++ b/www/ajax/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Ajax Exercise</title>
@@ -20,6 +20,9 @@
     </ul>
 
     <br class="clear"/>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/linter.js"></script>
     <script src="ajax.js"></script>
   </body>
 </html>
