--- a/www/array/index.html
+++ b/www/array/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Array Exercise</title>
@@ -8,6 +8,8 @@
   <body>
     <h1>Array Exercise</h1>
 
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/linter.js"></script>
     <script src="array.js"></script>
     <script src="/lib/jquery.js"></script>
     <script src="/lib/confirm.js"></script>
