--- a/www/sandbox/index.html
+++ b/www/sandbox/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Sandbox</title>
@@ -8,6 +8,8 @@
   <body>
     <h1>Sandbox</h1>
 
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/linter.js"></script>
     <script src="sandbox.js"></script>
   </body>
 </html>
