Small tweaks to improve a lab

--- a/www/ajax/index.html
+++ b/www/ajax/index.html
@@ -13,13 +13,13 @@
       <button>Load Content</button>
     </div>
 
-    <ul id="artists">
-    </ul>
+    <div class="container">
+      <ul id="artists">
+      </ul>
 
-    <ul id="details">
-    </ul>
-
-    <br class="clear"/>
+      <ul id="details">
+      </ul>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/linter.js"></script>
