Add a comment to help see it in `childNodes'

--- a/www/dom/index.html
+++ b/www/dom/index.html
@@ -21,6 +21,7 @@
 
             <nav>
               <ul id="main-nav">
+                <!-- I'm a comment -->
                 <li class="active">Donec pretium posuere tellus.</li>
                 <li>Nulla posuere.</li>
                 <li>Nullam rutrum.</li>
